hugr-core/src/snapshots/hugr_core__package__test__cfg.snap
---
source: hugr-core/src/package.rs
expression: hugr.mermaid_string()
---
---
config:
    layout: elk
---
graph LR
    subgraph 0 ["(0) Module"]
        direction LR
        subgraph 1 ["(1) FuncDefn: #quot;main#quot;"]
            direction LR
            2["(2) Input"]
            3["(3) Output"]
            subgraph 4 ["(4) [**CFG**]"]
                direction LR
                style 4 stroke:#832561,stroke-width:3px
                subgraph 6 ["(6) DataflowBlock"]
                    direction LR
                    7["(7) Input"]
                    8["(8) Output"]
                    9["(9) Tag(1)"]
                    7--"0:0<br>prelude.usize"-->9
                    9--"0:0<br>[prelude.usize]+[prelude.usize]"-->8
                end
                5["(5) ExitBlock"]
                subgraph 10 ["(10) DataflowBlock"]
                    direction LR
                    11["(11) Input"]
                    12["(12) Output"]
                    13["(13) Unit"]
                    14["(14) LoadConstant"]
                    11--"0:1<br>prelude.usize"-->12
                    13--"0:0<br>Unit"-->14
                    14--"0:0<br>Unit"-->12
                end
                6-."0:0".->10
                6-."1:0".->5
                10-."0:0".->5
            end
            2--"0:0<br>prelude.usize"-->4
            4--"0:0<br>prelude.usize"-->3
        end
    end
