hugr-core/src/snapshots/hugr_core__package__test__module.snap
---
source: hugr-core/src/package.rs
expression: hugr.mermaid_string()
---
---
config:
    layout: elk
---
graph LR
    subgraph 0 ["(0) [**Module**]"]
        direction LR
        style 0 stroke:#832561,stroke-width:3px
        1["(1) FuncDecl: #quot;test#quot;"]
    end
